Revert "variables.json.example changed"
This reverts commit dc161fa7bf80549cadd2776914889533e63bd9bc.

--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,5 +1,5 @@
 {
-    "yandex_folder_id": "fd8k0b72m3c4s4k883gb",
+    "yandex_folder_id": "folderid",
     "yandex_source_image_family": "ubuntu-1604-lts",
     "yandex_image_name": "reddit-base-{{timestamp}}",
     "yandex_image_family": "reddit-base",
