Revert "variables.json.example changed"
This reverts commit 82aef85f95e77a350d0b82696126e6b297e77e9a.

--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,6 +1,6 @@
 {
-    "yandex_service_account_key_file": "/Users/Marya/OTUS_education/secrets/key.json",
-    "yandex_folder_id": "b1gfur0hriltnhfetmgg",
+    "yandex_service_account_key_file": "/usr/secrets/key.json",
+    "yandex_folder_id": "folderid",
     "yandex_source_image_family": "ubuntu-1604-lts",
     "yandex_image_name": "reddit-base-{{timestamp}}",
     "yandex_image_family": "reddit-base",
