--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,5 +1,5 @@
 {
-    "yandex_service_account_key_file": "/Users/Marya/OTUS_education/secrets/key.json",
+    "yandex_service_account_key_file": "key.json",
     "yandex_folder_id": "b1gfur0hriltnhfetmgg",
     "yandex_source_image_family": "ubuntu-1604-lts",
     "yandex_image_name": "reddit-base-{{timestamp}}",
